resolve final bugs which were cutting off the episodes in the list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -156,7 +156,7 @@ body::before {
 }
 
 .season-accordion .season-episodes.expanded {
-  max-height: 2000px;
+  /* max-height: auto; */
   opacity: 1;
 }
 
